# meshtastic-network-simulator

./: Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  main.rs  main.tsx  protobufs.rs  simulation_engine.rs
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs  utils.rs
src-tauri/src/commands/: engine.rs
src-tauri/src/graph/: node.rs  types.rs
src-tauri/src/simulation/: engine.rs  mod.rs
src/connections/: mod.rs  stream_api.rs
src/graph/: node.rs
src/simulation/: engine.rs  point.rs  rectangle.rs
