[package]
name = "meshtastic-network-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14.0"
futures-util = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
