[package]
name = "meshtastic-network-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14.0"
futures-util = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = "0.7.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
humantime = "2.1.0"
fern = "0.6.2"
meshtastic = "0.1.3"
