[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["Adam McQuilkin"]
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
bollard = "0.14.0"
futures-util = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = "0.7.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
humantime = "2.1.0"
fern = "0.6.2"
meshtastic = "0.1.3"
tauri = { version = "1.4.0", features = [ "shell-open", "dialog-message"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
